Use black formatter instead of yapf

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         flake8 .
         mypy --ignore-missing-import .
-        yapf -r --diff .
+        black . --line-length 99 --check
 
     # - name: Install testing dependencies
     #   run: |
