--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: [3.5, 3.6, 3.7]
+        python-version: [3.5, 3.6, 3.7, 3.8]
 
     steps:
     - uses: actions/checkout@v1
@@ -28,10 +28,12 @@ jobs:
         python -c 'import kurobako'
 
     - name: Install checking dependencies
+      if: ${{ matrix.python-version }} == 3.7
       run: |
         pip install --progress-bar off $(ls dist/*.tar.gz)[checking]
 
     - name: Run checks
+      if: ${{ matrix.python-version }} == 3.7
       run: |
         flake8 .
         mypy --ignore-missing-import .
