--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,12 +28,12 @@ jobs:
         python -c 'import kurobako'
 
     - name: Install checking dependencies
-      if: ${{ matrix.python-version }} == 3.7
+      if: matrix.python-version == 3.7
       run: |
         pip install --progress-bar off $(ls dist/*.tar.gz)[checking]
 
     - name: Run checks
-      if: ${{ matrix.python-version }} == 3.7
+      if: matrix.python-version == 3.7
       run: |
         flake8 .
         mypy --ignore-missing-import .
